WIP: Adiciona listagem de filmes mais votados

--- a/config/locales/pt-BR.yml
+++ b/config/locales/pt-BR.yml
@@ -7,6 +7,7 @@ pt-BR:
       evaluation_fail: 'Falha ao realizar avaliação, tente novamente'
       update_evaluation_fail: 'Falha ao realizar atualização, tente novamente'
       update_evaluation_exceeded: "ATENÇÃO: Você excedeu o máximo de avaliações por usuário. Para realizar uma nova avaliação, remova uma das existentes!"
+      call_api_error: "Tivemos problemas técnicos, atualize a página para recarregar os filmes por gentileza."
   devise:
     confirmations:
       confirmed: "Seu endereço de e-mail foi confirmado com sucesso."
